tests/kubernetes/kyverno/replicaset-live-owner/user-info.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: replicaset-live-owner-user-info
userInfo:
  username: system:kube-controller-manager
